my-frontend-test-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose-resolved.yaml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: my-frontend-test
  name: my-frontend-test
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: my-frontend-test
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose-resolved.yaml
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/scanfile-default: "true"
        io.kompose.service: my-frontend-test
    spec:
      containers:
        - image: my-frontend-test
          name: mounttest2
          imagePullPolicy: Never
          ports:
            - containerPort: 8082
          resources: {}
      restartPolicy: Always
status: {}
