my-fsscan-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-fsscan-test
  namespace: daniele
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-fsscan-test
  template:
    metadata:
      labels:
        app: my-fsscan-test
    spec:
      containers:
      - name: my-fsscan-test
        image: k8s-master.local:5000/daniele-my-fsscan-test:latest
        ports:
        - containerPort: ${GRPC_SERVER_PORT}
        volumeMounts:
        - name: scanfile-data
          mountPath: /app/myData/scanfile
        - name: scanfile-env
          mountPath: /app/data
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
      volumes:
      - name: scanfile-data
        hostPath:
          path: ${SCANFILE_BASEDIR}myData/scanfile
      - name: scanfile-env
        hostPath:
          path: ${SCANFILE_BASEDIR}scanfile/data
