my-fsscan-test-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose-resolved.yaml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: my-fsscan-test
  name: my-fsscan-test
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: my-fsscan-test
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose-resolved.yaml
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/scanfile-default: "true"
        io.kompose.service: my-fsscan-test
    spec:
      containers:
        - image: my-fsscan-test
          name: mounttest1
          imagePullPolicy: Never
          resources: {}
          volumeMounts:
            - mountPath: /home/drossi/myTest/data
              name: my-fsscan-test-claim0
      restartPolicy: Always
      volumes:
        - name: my-fsscan-test-claim0
          persistentVolumeClaim:
            claimName: my-fsscan-test-claim0
status: {}
